syntax = "proto3";

package comments;

service Manager {
  rpc Create (CreateComment) returns (CommentUUID) {}
  rpc Read (PostUUID) returns (CommentList) {}
  rpc Count (PostUUID) returns (Count) {}
  rpc Update (EditComment) returns (CommentUUID) {}
  rpc Delete (CommentUUID) returns (CommentUUID) {}
  rpc DeleteFromPost (PostUUID) returns (PostUUID) {}
}

message CreateComment {
  string post_uuid = 1;
  string email = 2;
  string content = 3;
}

message EditComment {
  string comment_uuid = 1;
  string email = 2;
  string content = 3;
}

message Comment {
  string comment_uuid = 1;
  string post_uuid = 2;
  string email = 3;
  string content = 4;
}

message CommentList {
  repeated Comment comments = 1;
}

message Count {
  int32 count = 1;
}

message PostUUID {
  string post_uuid = 1;
}

message CommentUUID {
  string comment_uuid = 1;
}

